test/testzillians-compiler/ThorScriptCompilerStaticTest/data/error/1_type/function/MISMATCH_FUNC_ARGNUM_TOO_FEW.t
function g(a:int32):void {}

function f():void
{
    @static_test { expect_message={ level="LEVEL_ERROR", id="MISMATCH_CALL_ARGNUM_TOO_FEW", parameters={ func="g" } } }
    g();
}
